Add stub indexing

--- a/search/sphinx.conf
+++ b/search/sphinx.conf
@@ -1,14 +1,14 @@
 source walker
 {
     type = csvpipe
-    csvpipe_command = get_index_updates --all
+    csvpipe_command = __PREFIX__/bin/get_index_updates --all
     csvpipe_field = name
 }
 
 source delta : walker
 {
     type = csvpipe
-    csvpipe_command = get_index_updates
+    csvpipe_command = __PREFIX__/bin/get_index_updates
     csvpipe_field = name
 }
 
@@ -35,5 +35,5 @@ searchd
     seamless_rotate = 1
     preopen_indexes = 1
     unlink_old = 1
-    binlog_path = __PREFIX__/sphinx_binlog.bin
+    binlog_path = __PREFIX__/sphinx_binlog
 }
