Implement getting of index updates

--- a/search/sphinx.conf
+++ b/search/sphinx.conf
@@ -14,8 +14,10 @@ source delta : walker
 
 index main
 {
-    source = walker
-    path = __PREFIX__/sphinx
+    source  = walker
+    path    = __PREFIX__/sphinx
+    docinfo = none
+    morphology = lemmatize_en_all, lemmatize_ru_all, lemmatize_de_all, soundex
 }
 
 index delta : main
@@ -26,7 +28,7 @@ index delta : main
 
 searchd
 {
-    listen = 10001
+    listen = 127.0.0.1:10001:mysql41
     log = __PREFIX__/sphinx.log
     query_log = __PREFIX__/sphinx_query.log
     read_timeout = 5
