Add simple search script

--- a/walker/sphinx.conf
+++ b/walker/sphinx.conf
@@ -37,4 +37,5 @@ searchd
     preopen_indexes = 1
     unlink_old = 1
     binlog_path = __PREFIX__/sphinx_binlog
+    mysql_version_string = 5.0.37
 }
